--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
   "name": "@oasisdigital/just-rxjs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "del \"dist/src*\" && parcel build src/index.html",
+    "lint": "tslint --project .",
     "compile": "tsc --noEmit"
   },
-  "author": "",
+  "author": "Kyle Cordes <kyle.cordes@oasisdigital.com>",
   "license": "MIT",
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "^22.1.1",
-    "@ag-grid-community/core": "^22.1.1",
-    "lit-html": "^1.1.2",
-    "lodash-es": "^4.17.15",
+    "@ag-grid-community/client-side-row-model": "^27.2.1",
+    "@ag-grid-community/core": "^27.2.1",
+    "lit-html": "^2.2.3",
+    "lodash-es": "^4.17.21",
     "materialize-css": "0.100.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.3",
-    "del-cli": "^3.0.0",
-    "parcel-bundler": "^1.12.4",
-    "tslint": "^6.0.0",
+    "@types/lodash-es": "^4.17.6",
+    "del-cli": "^4.0.1",
+    "parcel": "^2.5.0",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "typescript": "^3.7.5"
+    "typescript": "^4.6.4"
   }
 }
